# sshmgr

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docs/: README.md  api-reference.md  architecture.md  cli-reference.md  configuration.md  installation.md  security.md  testing.md
docs/images/: architecture.mmd  auth-flow.mmd  cert-signing-flow.mmd  data-model.mmd
frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.ts  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/error/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/admin/: page.tsx
frontend/src/app/(dashboard)/admin/audit/: page.tsx
frontend/src/app/(dashboard)/admin/environments/: page.tsx
frontend/src/app/(dashboard)/config/: page.tsx
frontend/src/app/(dashboard)/user/: page.tsx
frontend/src/components/certificates/: certificate-table.tsx  index.ts
frontend/src/components/layout/: breadcrumbs.tsx  header.tsx  index.ts  sidebar.tsx
frontend/src/hooks/: index.ts  use-auth.ts  use-certificates.ts  use-environments.ts
frontend/src/providers/: index.tsx
frontend/src/types/: api.ts
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml  sshmgr-dashboard.json
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: keycloak_setup.py
src/sshmgr/: __init__.py  config.py  logging.py  metrics.py
src/sshmgr/api/: __init__.py  dependencies.py  main.py  ratelimit.py  schemas.py
src/sshmgr/api/routes/: __init__.py  certificates.py  environments.py  health.py
src/sshmgr/auth/: __init__.py  credentials.py  device_flow.py  jwt.py  keycloak.py  rbac.py
src/sshmgr/cli/: __init__.py  main.py  output.py
src/sshmgr/cli/commands/: __init__.py  auth.py  cert.py  environment.py  rotate.py
src/sshmgr/core/: __init__.py  ca.py  exceptions.py
src/sshmgr/keys/: __init__.py  base.py  encrypted.py
src/sshmgr/storage/: __init__.py  database.py  models.py  repositories.py
src/sshmgr/storage/migrations/: env.py
src/sshmgr/storage/migrations/versions/: 20240131_0001_initial_schema.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api_integration.py  test_auth_integration.py  test_ca_integration.py  test_cli_integration.py  test_repositories.py
tests/unit/: __init__.py  test_api.py  test_api_schemas.py  test_auth.py  test_ca.py  test_cli_main.py  test_cli_output.py  test_config.py  test_encrypted_keys.py  test_logging.py  test_metrics.py  test_ratelimit.py  test_storage.py
(+9 files in other folders)
