[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sshmgr"
version = "0.1.0"
description = "Multi-tenant SSH certificate management system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Security :: Cryptography",
]
keywords = ["ssh", "certificates", "ca", "key-management", "security"]

dependencies = [
    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",

    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Authentication
    "fastapi-keycloak>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.26.0",

    # Encryption
    "cryptography>=42.0.0",

    # Monitoring
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "aiosqlite>=0.19.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
sshmgr = "sshmgr.cli.main:cli"
sshmgr-server = "sshmgr.api.main:main"

[project.urls]
Homepage = "https://github.com/yourorg/sshmgr"
Documentation = "https://github.com/yourorg/sshmgr#readme"
Repository = "https://github.com/yourorg/sshmgr"
Issues = "https://github.com/yourorg/sshmgr/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sshmgr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["sshmgr"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
